--- a/src/app/application/deployment-verification/log-analysis/log-analysis.component.html
+++ b/src/app/application/deployment-verification/log-analysis/log-analysis.component.html
@@ -16,7 +16,7 @@
           </div>
           <!-- /.risk -->
           <div class="dropdown ml-3">
-            <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <button  class="btn btn-default dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               Low
             </button>
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
@@ -25,7 +25,7 @@
               <a class="dropdown-item" href="#">Medium</a>  
             </div>
           </div>
-          <button class="btn ml-3 btn-primary">Reclassify</button>
+          <button class="btn ml-3 btn-primary" (click)="getDetails()">Reclassify</button>
         </div>
         <!-- /.ml-auto -->
       </div>
