OP-2633: Average score calculation related code

--- a/src/app/application/deployment-verification/metric-analysis/metric-analysis.component.less
+++ b/src/app/application/deployment-verification/metric-analysis/metric-analysis.component.less
@@ -9,3 +9,15 @@
   border-radius: 2px;
   padding: 9px 9px 9px 9px;   
 }
+.countDisabledbtn{
+  color: #c7c1c1;
+}
+.countDangerbtn{
+  color:#fe6868;
+}
+.countWarningbtn{
+  color: #ffc266;
+}
+.countSuccessbtn{
+  color:#66c285;
+}
