--- a/src/app/application/deployment-verification/metric-analysis/metric-analysis.component.html
+++ b/src/app/application/deployment-verification/metric-analysis/metric-analysis.component.html
@@ -8,7 +8,7 @@
               <div class="input-group-prepend">
                 <span class="input-group-text" id="modal-search"><i class="fa fa-search"></i></span>
               </div>
-              <input type="text" class="form-control" placeholder="Search">
+              <input type="text" class="form-control" placeholder="Search" [(ngModel)]="searchData">
             </div>
             <div class="field col-4">
               <select class="form-control">
@@ -33,8 +33,8 @@
             </div>
           </div>
 
-          <div class="table-responsive">
-            <table class="table valign-middle table-bottom-border mb-4">
+          <div class="table-responsive" *ngIf="APMMetricData.length > 0 ? true : false">
+            <table class="table valign-middle table-bottom-border mb-4" >
               <thead>
                 <tr>
                   <th>APM SCORE</th>
@@ -46,13 +46,13 @@
                 </tr>
               </thead>
               <tbody>
-                <tr *ngFor = "let apmMetric of APMMetricData; let i=index;">
+                <tr *ngFor = "let apmMetric of APMMetricData | filter:searchData; let i=index;">
                   <td>{{apmMetric.name}}</td>
-                  <td><span class="countBox countSuccess">{{apmMetric.groupScore}}</span></td>
-                  <td class="text-center"><i class="fa fa-square matricstatusicon" aria-hidden="true"></i></td>
-                  <td class="text-center"><i class="fa fa-square matricstatusicon" aria-hidden="true"></i></td>
-                  <td class="text-center"><i class="fa fa-square matricstatusicon" aria-hidden="true"></i></td>
-                  <td class="text-center"><i class="fa fa-square matricstatusicon" aria-hidden="true"></i></td>
+                  <td><span class="countBox {{assignProperColor(apmMetric.groupScore)}}">{{apmMetric.groupScore}}</span></td>
+                  <td class="text-center {{AvgerageScore(i,'Latency')}}"><i class="fa fa-square matricstatusicon" aria-hidden="true"></i></td>
+                  <td class="text-center {{AvgerageScore(i,'Error')}}"><i class="fa fa-square matricstatusicon" aria-hidden="true"></i></td>
+                  <td class="text-center {{AvgerageScore(i,'Throughput')}}"><i class="fa fa-square matricstatusicon" aria-hidden="true"></i></td>
+                  <td class="text-center {{AvgerageScore(i,'Apdex')}}"><i class="fa fa-square matricstatusicon" aria-hidden="true"></i></td>
                 </tr>
               </tbody>
             </table>
@@ -128,7 +128,7 @@
               <div class="input-group-prepend">
                 <span class="input-group-text" id="modal-search"><i class="fa fa-search"></i></span>
               </div>
-              <input type="text" class="form-control" placeholder="Search">
+              <input type="text" class="form-control" placeholder="Search" [(ngModel)]="searchData">
             </div>
             <div class="field col-4">
               <select class="form-control">
@@ -153,7 +153,7 @@
             </div>
           </div>
 
-          <div class="table-responsive">
+          <div class="table-responsive" *ngIf="APMMetricData.length > 0 ? true : false">
             <table class="table valign-middle table-bottom-border mb-4">
               <thead>
                 <tr>
@@ -166,13 +166,13 @@
                 </tr>
               </thead>
               <tbody>
-                <tr *ngFor = "let apmMetric of APMMetricData; let i=index;">
+                <tr *ngFor = "let apmMetric of APMMetricData | filter:searchData; let i=index;">
                   <td>{{apmMetric.name}}</td>
-                  <td><span class="countBox countSuccess">{{apmMetric.groupScore}}</span></td>
-                  <td class="text-center"><i class="fa fa-square matricstatusicon" aria-hidden="true"></i></td>
-                  <td class="text-center"><i class="fa fa-square matricstatusicon" aria-hidden="true"></i></td>
-                  <td class="text-center"><i class="fa fa-square matricstatusicon" aria-hidden="true"></i></td>
-                  <td class="text-center"><i class="fa fa-square matricstatusicon" aria-hidden="true"></i></td>
+                  <td><span class="countBox {{assignProperColor(apmMetric.groupScore)}}">{{apmMetric.groupScore}}</span></td>
+                  <td class="text-center {{AvgerageScore(i,'Latency')}}"><i class="fa fa-square matricstatusicon" aria-hidden="true"></i></td>
+                  <td class="text-center {{AvgerageScore(i,'Error')}}"><i class="fa fa-square matricstatusicon" aria-hidden="true"></i></td>
+                  <td class="text-center {{AvgerageScore(i,'Throughput')}}"><i class="fa fa-square matricstatusicon" aria-hidden="true"></i></td>
+                  <td class="text-center {{AvgerageScore(i,'Apdex')}}"><i class="fa fa-square matricstatusicon" aria-hidden="true"></i></td>
                 </tr>
               </tbody>
             </table>
