--- a/src/app/application/deployment-verification/metric-analysis/metric-analysis.component.less
+++ b/src/app/application/deployment-verification/metric-analysis/metric-analysis.component.less
@@ -21,3 +21,14 @@
 .countSuccessbtn{
   color:#66c285;
 }
+td{
+  i{
+    cursor: pointer;
+    &:hover{
+      background-color: #d4d4d4;
+    }
+  }
+  .activeBtn{
+    background-color: #d4d4d4;
+  }
+}
